@@ -74,7 +74,7 @@ Depends: libdpkg-perl (= ${source:Version}), bzip2, xz-utils,
 Recommends: gcc | c-compiler, build-essential, fakeroot,
  gnupg | gnupg2, gpgv | gpgv2, libalgorithm-merge-perl
 Suggests: debian-keyring
-Breaks: dpkg-cross (<< 2.0.0), devscripts (<< 2.10.26)
+Breaks: dpkg-cross (<< 2.0.0), devscripts (<< 2.14.4)
 Replaces: manpages-it (<< 2.80-4)
 Description: Debian package development tools
  This package provides the development tools (including dpkg-source)
