@@ -48,6 +48,10 @@ dpkg (1.17.10) UNRELEASED; urgency=low
     Closes: #584233
   * Quiesce tar warnings in cron job by redirecting stderr to /dev/null, as
     it seems --warning=none does not work correctly. Closes: #748544
+  * Do not emit a trailing space from Dpkg::Control::Hash on a field's empty
+    first line. Bump dpkg-dev Breaks on devscripts to 2.14.4, as previous
+    versions expect a trailing space from dpkg-parsechangelog output.
+    Based on a patch by Johannes Schauer <j.schauer@email.de>. Closes: #749044
 
   [ Updated programs translations ]
   * Catalan (Guillem Jover).
